RESOLVED FIXED72573
WebKit does not send mouse down/up/click events to ARIA tabs
https://bugs.webkit.org/show_bug.cgi?id=72573
Summary WebKit does not send mouse down/up/click events to ARIA tabs
chris fleizach
Reported 2011-11-16 18:15:34 PST
WK needs to send click() when there's no actionElement
Attachments
patch (5.28 KB, patch)
2011-11-18 12:59 PST, chris fleizach
bdakin: review-
patch (6.75 KB, patch)
2011-11-30 16:16 PST, chris fleizach
darin: review+
chris fleizach
Comment 1 2011-11-18 12:54:50 PST
There are some more control type elements that should send the click event too when targeted
chris fleizach
Comment 2 2011-11-18 12:59:08 PST
chris fleizach
Comment 3 2011-11-18 12:59:45 PST
Beth Dakin
Comment 4 2011-11-30 14:27:58 PST
Comment on attachment 115851 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=115851&action=review Overall, this seems good, but since I have one issue above and there are no ChangeLogs, I am going to r- for the time being. I will definitely r+ once you address those things though. > Source/WebCore/accessibility/AccessibilityRenderObject.cpp:881 > + case RadioButtonRole: This shouldn't be necessary since this case should fall into the earlier conditional check: if (AccessibilityObject::isARIAInput(ariaRoleAttribute())). Right? > Source/WebCore/accessibility/AccessibilityRenderObject.cpp:882 > + case CheckBoxRole: Same for this one.
chris fleizach
Comment 5 2011-11-30 16:16:57 PST
Darin Adler
Comment 6 2011-11-30 16:25:09 PST
Comment on attachment 117291 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=117291&action=review > Source/WebCore/accessibility/AccessibilityRenderObject.cpp:883 > return static_cast<Element*>(m_renderer->node()); This should use the toElement checked cast instead of static_cast.
chris fleizach
Comment 7 2011-11-30 17:03:42 PST
chris fleizach
Comment 8 2011-11-30 17:05:43 PST
Note You need to log in before you can comment on or make changes to this bug.