WebKit does not send mouse down/up/click events to ARIA tabs https://bugs.webkit.org/show_bug.cgi?id=72573

Reviewed by Darin Adler.

Source/WebCore:

There are a number of "control" type elements that should perform a click on the actual element.

Test: accessibility/press-works-on-control-types.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::actionElement):

LayoutTests:

* accessibility/press-works-on-control-types-expected.txt: Added.
* accessibility/press-works-on-control-types.html: Added.



Canonical link: https://commits.webkit.org/90043@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101571 268f45cc-cd09-0410-ab3c-d52691b4dbfc